Rollback bug fix, branch menu overflow bug fix, domain changed back gigantum.io (#571)
* fixed rollback commit bug, fixed branch menu overflow bug, changed domain back to gigantum.io

* fixed dataset Managed label bug

* added todo comment

* positioning bug

--- a/ui/src/js/components/shared/header/branches/BranchMenu.scss
+++ b/ui/src/js/components/shared/header/branches/BranchMenu.scss
@@ -90,6 +90,7 @@ $dropBoxWidth: 250px;
      margin: 0 0 0 5px;
      color: $azure;
      font-size: 18px;
+     max-width: 220px;
    }
 }
 .BranchMenu__buttons {
